--- a/LintCodes/LintCode/CMakeLists.txt
+++ b/LintCodes/LintCode/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.8)
 
 aux_source_directory(. ALGO_DIR)
 
-add_library(AlgorithmsFuns ${ALGO_DIR})
+add_library(LintFuns ${ALGO_DIR})
