--- a/LintCodes/LintCode/CMakeLists.txt
+++ b/LintCodes/LintCode/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.8)
 
 aux_source_directory(. ALGO_DIR)
-
+set(CMAKE_BUILD_TYPE "Debug") 
+set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -g")
+set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
 add_library(LintFuns ${ALGO_DIR})
